Team page update

--- a/people.html
+++ b/people.html
@@ -23,7 +23,7 @@
 	<header>
 		<!-- image source: https://unsplash.com/photos/PGnqT0rXWLs -->
 		<!-- <img src="img/helena-lopes-PGnqT0rXWLs-unsplash.jpg"> -->
-		<img src="img/team_xmas_garland.jpg">
+		<img src="img/team.jpg">
 	</header>
 	<main>
 		<h1>Our team</h1>
@@ -31,7 +31,7 @@
 			<ul class="team-members">
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/Jana_Jeschke_xmas_hat_2.jpg">
+						<img src="img/Jana_Jeschke.jpg">
 					</div>
 					<div class="column column-right">
 						<h2>Jana Jeschke, PhD</h2>
@@ -160,25 +160,29 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/andrew-neel-QLqNalPe0RA-unsplash.jpg">
+						<img src="img/Laura_Pistoni_Vianelli.jpg">
 					</div>
 					<div class="column column-right">
-						<h2>You?</h2>
-						<h3>PhD Student</h3>
+						<h2>Laura Pistoni Vianelli</h2>
+						<h3>PhD student</h3>
 						<p>
-							More info to come...
+							During her master’s studies in Italy, Laura developed a deep interest in oncology and joined the Cancer Biology & Epigenetics Group at IPO-Porto, where she studied epigenetic mechanisms in cancer under Prof. Carmen Jerónimo. After losing her beloved mamma to breast cancer, she moved to the U.S. to research the genetic and epigenetic determinants of chemotherapy resistance at OMRF in Jake Kirkland’s lab. Seeking to broaden her expertise, she later joined Dr. Jana Jeschke’s group as a PhD student to study epitranscriptomic alterations in cancer treatment.
+						<p>
+							Outside the lab, Laura enjoys pizza, weekend brunches, reading, Pilates, and traveling to visit friends worldwide. She lives by the motto “You cannot change the world if you don’t have fun” and her mamma's favorite saying, “Va a belase.”
 						</p>
 					</div>
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/lab_technician_unsplash.jpg">
+						<img src="img/Henry_del_Marmol.jpeg">
 					</div>
 					<div class="column column-right">
-						<h2>You?</h2>
-						<h3>Lab Technician</h3>
+						<h2>Henry del Marmol</h2>
+						<h3>MSc student</h3>
 						<p>
-							Joining soon!
+							Henry is a second year Master’s student of the Cancer, Stem Cell and Developmental Biology program at Utrecht University. He joined the lab for his bioinformatics internship on the benchmarking of bioinformatic tools to detect m6A modification profiles in breast cancer, using Oxford Nanopore Direct RNA Sequencing data.
+						<p>
+							Outside of the lab, Henry enjoys working out, playing music, and drawing.
 						</p>
 					</div>
 				</li>
