--- a/publications.html
+++ b/publications.html
@@ -29,6 +29,51 @@
 			This is a selection of our publications. Follow <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Jeschke%2C%20Jana%5BAuthor%5D&sort=pubdate" target="_blank">this link</a> for a full overview on PubMed.
 		</p>
 		<section class="publication-list">
+			<h2>2025</h2>
+			<div class="publication">
+				<h3>
+					Fine-tuning of gene expression through the Mettl3-Mettl14-Dnmt1 axis controls ESC differentiation
+				</h3>
+				<p>
+					Giuseppe Quarto, Andrea Li Greci, Martin Bizet, Audrey Penning, Irina Primac, Frédéric Murisier, Liliana Garcia-Martinez, Rodrigo L Borges, Qingzeng Gao, Pradeep K R Cingaram, Emilie Calonne, Bouchra Hassabi, Céline Hubert, Adèle Herpoel, Pascale Putmans, Frédérique Mies, Jérôme Martin, Louis Van der Linden, Gaurav Dube, Pankaj Kumar, Romuald Soin, Abhay Kumar, Anurag Misra, Jie Lan, Morgane Paque, Yogesh K Gupta, Arnaud Blomme, Pierre Close, Pierre-Olivier Estève, Elizabeth A Caine, Kristin M Riching, Cyril Gueydan, Danette L Daniels, Sriharsa Pradhan, Ramin Shiekhattar, Yael David, Lluis Morey, Jana Jeschke, Rachel Deplus, Evelyne Collignon, François Fuks
+				</p>
+				<p>
+					<em>Cell</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1016/j.cell.2024.12.009">doi.org/10.1016/j.cell.2024.12.009</a>
+				</p>
+			</div>
+			<h2>2024</h2>
+			<div class="publication">
+				<h3>
+					Women in STEM becoming independent: The journey to independence is an immensely gratifying odyssey
+				</h3>
+				<p>
+					Clarissa Campbell, Maja C Funk, Yuki Hattori, Wei Hu, Jana Jeschke, Colleen M Lau, Guang Sheng Ling, Siqi Liu, Verónica Lloréns-Rico, Elisa Nemes
+				</p>
+				<p>
+					<em>Journal of Experimental Medicine</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1084/jem.20240842">doi.org/10.1084/jem.20240842</a>
+				</p>
+			</div>
+			<h2>2023</h2>
+			<div class="publication">
+				<h3>
+					Editorial: Advances in cancer detection and diagnosis: from liquid biopsies and molecular biomarkers to opportunistic intratumoral bacteria
+				</h3>
+				<p>
+					Jana Jeschke
+				</p>
+				<p>
+					<em>Current Opinion in Oncology</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1097/cco.0000000000000930">10.1097/cco.0000000000000930</a>
+				</p>
+			</div>
 			<h2>2022</h2>
 			<div class="publication">
 				<h3>
